Add convention service pricing
